--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -13,12 +13,10 @@
 // latout
 @import "layout/header";
 @import "layout/section";
-@import "layout/slider";
 @import "layout/artist";
-@import "layout/youtube";
 @import "layout/mv";
 @import "layout/playlist";
 @import "layout/unsplash";
 @import "layout/movie";
-@import "layout/mv";
+@import "layout/tv";
 @import "layout/footer";
