--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -107,7 +107,7 @@
             border-bottom: 2px solid var(--black);
             position: relative;
             width: 100%;
-            pointer-events: all;
+            pointer-events: none;
             color: var(--black) !important;
 
             &::before {
@@ -415,6 +415,7 @@
               padding-bottom: 0;
               position: relative;
               cursor: pointer;
+              pointer-events: auto;
 
               &::after {
                 content: "";
