--- a/src/assets/scss/layout/_section.scss
+++ b/src/assets/scss/layout/_section.scss
@@ -142,6 +142,10 @@
             h3 {
               font-size: 45px;
               margin-bottom: 45px;
+
+              p {
+                font-size: 45px;
+              }
             }
 
             .desc {
@@ -190,6 +194,7 @@
               margin-bottom: 2vw;
 
               p {
+                font-size: 8.5vw;
                 margin-left: 0;
               }
             }
@@ -210,7 +215,7 @@
             }
 
             a {
-              font-size: 2vw;
+              font-size: 2.4vw;
               padding: 1vw 3vw;
             }
           }
