--- a/src/assets/scss/layout/_section.scss
+++ b/src/assets/scss/layout/_section.scss
@@ -401,6 +401,21 @@
   }
 }
 
+/* =======================================================
+    아티스트 모바일 반응형
+========================================================*/
+
+@media (max-width: 500px) {
+  .section {
+    .artist-desc {
+      display: grid !important;
+      > div {
+        width: 100% !important;
+      }
+    }
+  }
+}
+
 /* ================================================
     뮤직비디오
 =================================================== */
