--- a/public/assets/scss/layout/_artist.scss
+++ b/public/assets/scss/layout/_artist.scss
@@ -1,5 +1,17 @@
 #artist {
   .artist-inner {
+    .artist-btn {
+      padding-bottom: 20px;
+
+      div {
+        display: inline-block;
+
+        button {
+          margin-bottom: 10px;
+        }
+      }
+    }
+
     .artist-cont {
       @include flex-between;
       gap: 40px 0;
