--- a/public/assets/scss/layout/_unsplash.scss
+++ b/public/assets/scss/layout/_unsplash.scss
@@ -34,6 +34,14 @@
         &:last-child {
           margin-bottom: 0px;
         }
+    
+        @media (max-width: 500px) {
+          button {
+            &:nth-child(3n) {
+              margin-right: 0;
+            }
+          }
+        }
       }
     }
 
