--- a/src/assets/scss/layout/_artist.scss
+++ b/src/assets/scss/layout/_artist.scss
@@ -71,8 +71,12 @@
             }
             .artist-name {
               h4 {
+                @include line-ellipsis;
                 font-size: 17px;
                 font-weight: 700;
+              }
+              p {
+                @include line-ellipsis;
               }
             }
           }
