모바일 가로스크롤 방지

--- a/public/assets/scss/setting/_reset.scss
+++ b/public/assets/scss/setting/_reset.scss
@@ -8,11 +8,13 @@ html {
   //가로 확대 금지 - ios
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 body,
