--- a/public/assets/scss/setting/_reset.scss
+++ b/public/assets/scss/setting/_reset.scss
@@ -8,12 +8,17 @@ html {
   //가로 확대 금지 - ios
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  overflow-x: hidden;
 }
 
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+}
+
+/* 모바일 수평 스크롤 금지 */ 
+html,
+body {
+  max-width: 100%;
   overflow-x: hidden;
 }
 
