모바일 가로스크롤 방지3

--- a/src/assets/scss/setting/_reset.scss
+++ b/src/assets/scss/setting/_reset.scss
@@ -15,6 +15,13 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+/* 모바일 수평 스크롤 금지 */ 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body,
 div,
 dl,
